<resources>
    <string name="app_name">Noctale</string>
    <string name="welcome">XIN CHÀO,</string>
    <string name="log_in">Đăng nhập vào tài khoản</string>
    <string name="user_name">Tên người dùng</string>
    <string name="hidden_user_name">Tên người dùng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="hidden_phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="hidden_password">Mật khẩu</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký ngay!</string>
    <string name="th_continue">Tiếp tục với</string>
    <string name="continue_google">Continue with Google</string>
    <string name="sign_in">ĐĂNG KÝ</string>
    <string name="register_button_text">Đăng Ký</string>
    <string name="email">Email</string>
    <string name="hidden_email">Email</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="email_reset">Nhập email để nhận mã đặt lại mật khẩu</string>
    <string name="reset_code">Mã đặt lại mật khẩu</string>
    <string name="welcome_app">Welcome to Noctale</string>
    <string name="notification">Thông báo</string>
    <string name="write">Sáng tác</string>
    <string name="on_reading">Truyện bạn đang đọc</string>
    <string name="continue_read">TIẾP TỤC ĐỌC</string>
    <string name="popular_category">Thể loại phổ biến</string>
    <string name="suggest_you">Đề xuất cho bạn</string>
    <string name="new_story">Truyện mới</string>
    <string name="offline_story">Truyện offline</string>
    <string name="other_story">Truyện khác</string>
    <string name="home">Trang chủ</string>
    <string name="library">Thư viện</string>
    <string name="search">Tìm kiếm</string>
    <string name="profile">Hồ sơ</string>
    <string name="explore">Khám phá</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="search_hint">Tìm kiếm truyện, tác giả, danh mục</string>
    <string name="read_now">Đọc ngay</string>
    <string name="add_library">Thêm vào thư viện</string>
    <string name="story">Truyện</string>
    <string name="author">Tác giả</string>
    <string name="category">Danh mục</string>
    <string name="product">Tác phẩm</string>
    <string name="fans">Người hâm mộ</string>
    <string name="following">Đang theo dõi</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="follow">Theo dõi</string>
    <string name="followed">Đã theo dõi</string>
    <string name="start_reading">Bắt đầu đọc</string>
    <string name="chapter_list">Danh sách chương</string>
    <string name="launch">Ra mắt</string>
    <string name="chapter">Chương</string>
    <string name="language">Ngôn ngữ</string>
    <string name="rating">Đánh giá</string>
    <string name="description">Mô tả</string>
    <string name="comment">Bình luận</string>
    <string name="book_deatil">Chi tiết sách</string>
    <string name="delete">Xóa</string>
    <string name="reply">Trả lời</string>
    <string name="style">Phong cách</string>
    <string name="share">Chia sẻ</string>
    <string name="create_story">Tạo truyện mới</string>
    <string name="your_story">Truyện của bạn</string>
    <string name="homeview_content_description">Home View Content</string>
    <string name="libraryview_content_description">Library View Content</string>
    <string name="exploreview_content_description">Explore View Content</string>
    <string name="profileview_content_description">Profile View Content</string>
    <string name="process">Tiến trình</string>
    <!-- TODO: String name for reset password -->
    <string name="back">Return</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter the email associated with your account to reset your password</string>
    <string name="your_email">Email Address</string>
    <string name="send_email">Send</string>
    <string name="icon_email">Email Icon</string>
    <string name="email_checking">Check your mail</string>
    <string name="email_sending">We have sent a password recover instructions to your email</string>
    <string name="open_email">Open email app</string>
    <string name="skip_check_email">Or skip this step</string>
    <string name="email_failed">Did not receive the email? Check your spam filter, or try another email address</string>
    <string name="new_password_created">Creat new password</string>
    <string name="different_password">Your new password must be different from previous used passwords.</string>
    <string name="new_password">Password</string>
    <string name="valid_password">Must be at leaste 8 characters</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="final_valid_password">Both passwords must match</string>
    <string name="reset_password">Reset password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_home">Hi,</string>
    <string name="book_name">Demo book name</string>
    <string name="process_onread">50%</string>
    <string name="TextColorSetting">Màu nền</string>
    <string name="TextColorA">Trắng</string>
    <string name="TextColorB">Sepia</string>
    <string name="TextColorC">Đen</string>
    <string name="TextSize">Cỡ chữ</string>
    <string name="BackgroundColorSetting">Màu chữ</string>
    <string name="BackgroundColorA">Đen</string>
    <string name="BackgroundColorB">Sepia</string>
    <string name="BackgroundColorC">Trắng</string>
    <string name="ReaderSetting">Cài đặt</string>
    <string name="ApplySetting">Luu thay đổi</string>
    <string name="x_of_book">0 trong 25 truyện</string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="follower">Người theo dõi</string>
    <string name="local_save">Tải sách</string>
    <string name="not_found_result">Không tìm thấy kết quả</string>
    <string name="try_search_again">Hãy thử với từ khoá khác tại lần tìm kiếm tiếp theo</string>
    <string name="books_name">Tên sách</string>
    <string name="books_description">Mô tả sách</string>
    <string name="reader_setting">Tùy Chỉnh</string>
    <string name="ChapterComment">Bình Luận</string>
    <string name="no_book_genres">Chưa có sách cho thể loại này hãy thử tìm thể loại khác</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="profile_information">Thông tin tài khoản</string>
    <string name="edit_profile">Sửa hồ sơ</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="save">Lưu</string>
</resources>