<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resetpassword.CheckEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".CheckMailFragment">
        <ImageView
        android:id="@+id/img_email_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_letter"
        android:contentDescription="@string/icon_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_check_mail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email_checking"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_email_icon" />

        <TextView
            android:id="@+id/textview_mail_sent_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_sending"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_check_mail_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            android:layout_width="244dp"
            android:layout_height="61dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/open_email"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/dark_cloud"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_mail_sent_message"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/txtview_skip_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/skip_check_email"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/holo_purple"
            app:layout_constraintBottom_toTopOf="@+id/textview_did_not_receive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset_password"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/textview_did_not_receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="232dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/email_failed"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>