<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/proxima_nova_extrabold"
        android:text="@string/ReaderSetting"
        android:textColor="@color/dark_cloud"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgButtonReturn"
        android:layout_width="53dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:padding="16dp"
        android:scaleType="center"
        android:src="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/item_bg_category_selector"
            android:fontFamily="@font/proxima_nova_extrabold"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/dark_cloud"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/item_bg_category_selector"
            android:fontFamily="@font/proxima_nova_extrabold"
            android:text="@string/button_logout"
            android:textColor="@color/warning_red"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>